acceptance/tests/fixtures/cases/api-gateways/ent-tls-termination/gatewayclassconfig.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

apiVersion: consul.hashicorp.com/v1alpha1
kind: GatewayClassConfig
metadata:
  name: ent-tls-termination-gateway-class-config
spec:
  mapPrivilegedContainerPorts: 8000
