acceptance/tests/fixtures/cases/api-gateways/ent-tls-termination/kustomization.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

resources:
- ../../static-server-inject
- ../../static-server-2-inject
- gatewayclassconfig.yaml
- gatewayclass.yaml
- gateway.yaml
- httproute-s1.yaml
- httproute-s2.yaml
